welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: value += is not a member of Int
		diag += 1
                     ^