welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {

def fonctionTest():Boolean = {
	(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1)
}

var i = 0
var j = 0
var cpt = 0

while (!fonctionTest) {
	setPos(i,j)
	ecritMessage(cpt)
	for (diag <- 0 to getMondeHauteur()) {
		j+=1
		diag += 1
	}
	

	
}

}